--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,4 @@
-altair==5.5.0
-annotated-types==0.7.0
-arabic-reshaper==3.0.0
-asn1crypto==1.5.1
-attrs==25.3.0
-bcrypt==4.2.1
-blinker==1.8.2
-blis==1.2.1
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.21.0
-colorama==0.4.6
-confection==0.1.5
-cryptography==43.0.1
-cssselect2==0.7.0
-cymem==2.0.11
-defusedxml==0.7.1
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-et_xmlfile==2.0.0
-filelock==3.18.0
 Flask==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-fonttools==4.53.1
-fpdf==1.7.2
-fpdf2==2.7.9
-fsspec==2025.3.2
-geographiclib==2.0
-geopy==2.4.1
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.1.1
-html5lib==1.1
-huggingface-hub==0.30.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-langcodes==3.5.0
-language_data==1.3.0
-lxml==5.3.0
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mpmath==1.3.0
-murmurhash==1.0.12
-narwhals==1.35.0
-networkx==3.4.2
-nltk==3.9.1
-numpy==2.1.3
-opencv-python==4.11.0.86
-openpyxl==3.1.5
-oscrypto==1.3.0
-packaging==24.2
-pandas==2.2.3
-pdfkit==1.0.0
-pdfminer.six==20231228
-pdfplumber==0.11.5
-pillow==11.1.0
-preshed==3.0.9
-protobuf==5.29.4
-pyarrow==19.0.1
-pycparser==2.22
-pydantic==2.11.1
-pydantic_core==2.33.0
-pydeck==0.9.1
-Pygments==2.19.1
-pyHanko==0.25.1
-pyhanko-certvalidator==0.26.3
-pypdf==5.0.0
-pypdfium2==4.30.1
-pypng==0.20220715.0
-python-bidi==0.6.0
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.1.0
-pytz==2024.2
-PyYAML==6.0.2
-qrcode==7.4.2
-referencing==0.36.2
-regex==2024.11.6
-reportlab==4.2.2
-requests==2.32.3
-rich==14.0.0
-rpds-py==0.24.0
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
-setuptools==78.1.0
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.1.0
-smmap==5.0.2
-spacy==3.8.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.36
-srsly==2.5.1
-streamlit==1.44.1
-svglib==1.5.1
-sympy==1.13.1
-tenacity==9.1.2
-thinc==8.3.4
-threadpoolctl==3.6.0
-tinycss2==1.3.0
-tokenizers==0.21.1
-toml==0.10.2
-torch==2.6.0
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.50.3
-typer==0.15.2
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==5.2
-uritools==4.0.3
-urllib3==2.2.3
-wasabi==1.1.3
-watchdog==6.0.0
-weasel==0.4.1
-webencodings==0.5.1
-Werkzeug==3.0.4
-wrapt==1.17.2
-xhtml2pdf==0.2.16
+python-docx==0.8.11
+Pillow==11.1.0
 gunicorn==23.0.0
-
